# fdt-parser

./: .gitignore  CLAUDE.md  Cargo.toml  README.json  README.md  crates.js  example_all_nodes.rs  gen_dts.sh  help.html  index.html  settings.html  src-files.js
.claude/: settings.local.json
.github/workflows/: check.yml  ci.yml  deploy.yml  release.yml  test.yml
dtb-file/: Cargo.toml
dtb-file/src/: lib.rs
dtb-tool/: Cargo.toml
dtb-tool/src/: main.rs
dtb_file/: all.html  fn.fdt_3568.html  fn.fdt_phytium.html  fn.fdt_qemu.html  fn.fdt_reserve.html  fn.fdt_rpi_4b.html  index.html  sidebar-items.js  struct.Align4Vec.html
dtb_tool/: all.html  fn.main.html  index.html  struct.Args.html
examples/: bcm2711.rs  recursive_walk.rs
fdt-edit/: CHANGELOG.md  Cargo.toml  LLMs.txt  README.md
fdt-edit/examples/: display_dts.rs  fdt_debug_demo.rs
fdt-edit/src/: ctx.rs  display.rs  encode.rs  fdt.rs  lib.rs  view.rs  visit.rs
fdt-edit/tests/: all_nodes.rs  builder_cells.rs  cells_scope.rs  clock.rs  display.rs  display_debug.rs  edit.rs  encode.rs  fdt.rs  find2.rs  find_all.rs  irq.rs  memory.rs  pci.rs  range.rs  rebuild.rs  remove_node.rs
fdt-parser/: Cargo.toml  README.md
fdt-parser/examples/: bcm2711.rs  phytium.rs  recursive_walk.rs  test_walker.rs
fdt-parser/src/: chosen.rs  clocks.rs  data.rs  define.rs  error.rs  fdt.rs  fdt_no_mem.rs  header.rs  interrupt.rs  lib.rs  node.rs  pci.rs  property.rs  read.rs  root.rs  walk.rs
fdt-parser/src/base/: fdt.rs  mod.rs
fdt-parser/src/base/node/: chosen.rs  clock.rs  interrupt_controller.rs  memory.rs  mod.rs
fdt-parser/src/cache/: fdt.rs  mod.rs
fdt-parser/src/cache/node/: chosen.rs  clock.rs  interrupt_controller.rs  memory.rs  mod.rs  pci.rs
fdt-parser/src/node/: chosen.rs  clock.rs  interrupt_controller.rs  memory.rs  mod.rs
fdt-parser/tests/: head.rs  no_mem.rs  node.rs
fdt-raw/: CHANGELOG.md  Cargo.toml  README.md
fdt-raw/src/: data.rs  define.rs  fdt.rs  fmt_utils.rs  header.rs  iter.rs  lib.rs
fdt-raw/src/node/: chosen.rs  memory.rs  mod.rs  prop.rs
fdt-raw/src/node/prop/: mod.rs  ranges.rs  reg.rs
fdt-raw/tests/: classify.rs  node.rs  ranges.rs  rsv.rs
fdt_edit/: all.html  enum.ClockType.html  enum.NodeKind.html  enum.NodeMut.html  enum.NodeRef.html  enum.PciSpace.html  enum.Status.html  index.html  sidebar-items.js  struct.ClockRef.html  struct.Context.html  struct.Fdt.html  struct.FdtData.html  struct.FixedClock.html  struct.MemoryReservation.html  struct.Node.html  struct.NodeDisplay.html  struct.NodeIter.html  struct.NodeIterMut.html  struct.NodeMemory.html  struct.NodeRefClock.html  struct.NodeRefDisplay.html  struct.NodeRefInterruptController.html  struct.NodeRefMemory.html  struct.NodeRefPci.html  struct.PciInterruptInfo.html  struct.PciInterruptMap.html  struct.PciRange.html  struct.Phandle.html  struct.Property.html  struct.RangesEntry.html  struct.RegInfo.html
fdt_edit/ctx/: struct.Context.html
fdt_edit/encode/: struct.FdtData.html
fdt_parser/: all.html  constant.FDT_MAGIC.html  enum.FdtError.html  enum.Status.html  index.html  sidebar-items.js  struct.FdtRange.html  struct.FdtRangeIter.html  struct.FdtRangeSilce.html  struct.FdtReg.html  struct.Header.html  struct.MemoryRegion.html  struct.Phandle.html  struct.Property.html
fdt_raw/: all.html  constant.FDT_MAGIC.html  enum.FdtError.html  enum.Node.html  enum.Status.html  enum.Token.html  index.html  sidebar-items.js  struct.Chosen.html  struct.Fdt.html  struct.Header.html  struct.Memory.html  struct.MemoryRegion.html  struct.MemoryReservation.html  struct.NodeBase.html  struct.Phandle.html  struct.PropIter.html  struct.Property.html  struct.RangeInfo.html  struct.RegInfo.html  struct.RegIter.html  struct.VecRange.html
search.index/: 01f34ff61b77.js  022dc4b95968.js  05a6571fd67e.js  086e1282a6d6.js  091a4eea2573.js  0cb3b5c2d52a.js  0d30413e9350.js  0dd84f6f043e.js  0ea4e3958fbf.js  115034bcd30b.js  11c7fe2d2712.js  12079e2cd282.js  12d5e75c348d.js  13f5cb50c0ee.js  15dbdfcd442b.js  17786daebfab.js  181556a138a1.js  1839cc68694c.js  1fc74f4814a4.js  20fee281dc97.js  2958eaf3e0fb.js  29e3a262501f.js  2ce5cff132d4.js  2f6b608b26ce.js  30191fac7ec4.js  34082068b57e.js  355d3e511e96.js  3692a85cd478.js  371d0f68a094.js  379b04176d93.js  39183a5384fc.js  3970ba485a65.js  3998f172d447.js  3ba2389b85bf.js  3e32b33ad9d3.js  40b1c74010fa.js  449cc25161dc.js  455b11a78a9d.js  54cb07770085.js  556f3b9a618b.js  (+31 more)
src/: define.rs  error.rs  fdt.rs  lib.rs  node.rs  read.rs
(+237 files in other folders)
