[package]
name = "dtb-tool"
version = "0.1.0"
authors = ["Zhourui <zrufo747@outlook.com>"]
edition = "2021"
repository = "https://github.com/qclic/fdt-parser"
documentation = "https://docs.rs/fdt-parser"
license = "MPL-2.0"
description = "A pure-Rust `#![no_std]` crate for parsing FDT"
keywords = ["devicetree", "fdt", "dt", "dtb"]
categories = ["embedded", "no-std"]
publish = false

[dependencies]
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5.20", features = ["derive"] }
fdt-parser = { path = "../fdt-parser" }
