[package]
name = "fdt-parser"
version = "0.4.7"
authors = ["周睿 <zrufo747@outlook.com>"]
edition = "2021"
repository = "https://github.com/qclic/fdt-parser"
documentation = "https://docs.rs/fdt-parser"
license = "MPL-2.0"
description = "A crate for parsing FDT"
keywords = ["devicetree", "fdt", "dt", "dtb"]
categories = ["embedded", "no-std"]

[lib]
doctest = false

[dependencies]

[dev-dependencies]
env_logger = "0.11"
log = "0.4"
