[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "A crate for parsing FDT"
documentation = "https://docs.rs/fdt-parser"
edition = "2021"
keywords = ["devicetree", "fdt", "dt", "dtb"]
license = "MPL-2.0"
name = "fdt-parser"
repository = "https://github.com/qclic/fdt-parser"
version = "0.5.0"

[features]
alloc = []
default = ["alloc"]

[lib]
doctest = false

[dependencies]
heapless = "0.9"
thiserror = "2"

[dev-dependencies]
dtb-file = {path = "../dtb-file"}
env_logger = "0.11"
log = "0.4"
