[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "A crate for parsing FDT"
documentation = "https://docs.rs/fdt-parser"
edition = "2021"
keywords = ["devicetree", "fdt", "dt", "dtb"]
license = "MPL-2.0"
name = "fdt-parser"
repository = "https://github.com/qclic/fdt-parser"
version = "0.5.0"


[lib]
doctest = false

[dependencies]
thiserror = { version = "2", default-features = false }
heapless = "0.9"
log = { version = "0.4", default-features = false }

[dev-dependencies]
dtb-file = { path = "../dtb-file" }
env_logger = "0.11"
